# AcademicDreamer

./: .env.example  .gitignore  CLAUDE.md  README.md  agents.md  pyproject.toml
.github/workflows/: publish.yml
academic_dreamer/: __init__.py  cli.py  main.py
academic_dreamer/agents/: __init__.py  render_compiler.py  style_inference.py  visual_architect.py
academic_dreamer/config/: __init__.py  defaults.yaml  settings.py
academic_dreamer/core/: __init__.py  generation_pipeline.py  orchestrator.py  output_formatter.py  review_iteration.py  target_classifier.py  usage_tracker.py
academic_dreamer/models/: __init__.py  schemas.py  state.py
academic_dreamer/prompts/: render_compile.md  visual_schema.md
academic_dreamer/prompts/venues/: _template.md  cvpr.md  iclr.md  nature.md  neurips.md
examples/: api_example.py  request.json  run.sh
